# libdddvision

./: AdjustBorders.m  AffineAlignment.m  AffineVelocity.m  Anandan2.m  ApianusCam_c.m  AxisAngle2Quat.m  BodyInertia.m  BodyState2Projective.m  BuildPyramid.m  ComputeDerivatives2.m  ComputeGaussian.m  CopyrightTool.fig  CopyrightTool.m  Counter.m  CustomCam_c.m  CustomCam_u.m  DetectCorners.m  DrawLineSegment.c  Eig2.m  Eig2x2.m  EigBalance.m  EllipticalRadius.m  Euler2Matrix.m  Euler2Quat.m  Expand.m  Expand2.m  FindSpatialCentroid.m  Fisheye_c.m  Fisheye_u.m  Gabor.m  GallIsoCam_c.m  GallIsoCam_u.m  HarrisCorner.m  HistSeg.m  Homo2Quat.m  IMUModel.m  IMUSim.m  ImageDifference.m  ImageMerge.m  InverseProjective.m  (+124 more)
VideoServerGST/: CMakeLists.txt  VideoServerGST.cpp  VideoServerGST.h  testVideoServerGST.cpp
surf/: LICENSE.txt  MEXcvExtractSURF.cpp  makeMEXcvExtractSURF.m
trajectory/: convert.m  derivative2.m  eval.m  rotate.m  trajectory.m  translate.m
trunk/: AffineAlignment.m  AffineVelocity.m  Anandan2.m  ApianusCam_c.m  AxisAngle2Euler.m  AxisAngle2Matrix.m  AxisAngle2Quat.m  BodyInertia.m  BodyState2Projective.m  BuildPyramid.m  ComputeDerivatives2.m  CustomCam_c.m  CustomCam_u.m  DrawLineSegment.c  Eig2x2.m  EigBalance.m  EllipticalRadius.m  Euler2AxisAngle.m  Expand2.m  FindSpatialCentroid.m  Fisheye_c.m  Fisheye_u.m  Gabor.m  GallIsoCam_c.m  GallIsoCam_u.m  GeoRotationModel.m  Geocentric2Geodetic.m  Geodetic2Geocentric.m  GravityModel.m  HarrisCorner.m  HistSeg.m  Homo2Quat.m  IMUModel.m  ImageDifference.m  KalmanUpdate.m  LocalAverage.m  LocalMAX.m  (+75 more)
(+11 files in other folders)
